--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twilio-video-app-react",
+  "name": "Coach Frontend",
   "version": "0.11.1",
   "private": true,
   "license": "Apache-2.0",
